Internationalisation and localisation.

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -18,7 +18,7 @@
             </div>
 			<ul id="tools">
 			    <li>
-			        <a href="@{Admin.index()}">Log in to write something</a>
+			        <a href="@{Admin.index()}">&{'views.main.tools.login'}</a>
 			    </li>
 			</ul>
 			<div id="title">
