--- a/app/views/Admin/index.html
+++ b/app/views/Admin/index.html
@@ -1,6 +1,6 @@
 #{extends 'admin.html' /}
  
-<h3>Welcome ${user}, <span>you have written ${posts.size() ?: 'no'} ${posts.pluralize('post', 'posts')} so far</span></h3>
+<h3>&{'views.Admin.index.welcome', user, posts.size(), posts.pluralize(messages.get('post'), messages.get('posts'))}</h3>
  
 #{list items:posts, as:'post'}
     <p class="post ${post_parity}">
