--- a/app/views/Application/listTagged.html
+++ b/app/views/Application/listTagged.html
@@ -1,5 +1,5 @@
 #{extends 'main.html' /}
-#{set title:'Posts tagged with ' + tag /}
+#{set title:&{'views.Application.listTagged.title', tag} /}
  
 *{********* Title ********* }*
  
