--- a/app/views/admin.html
+++ b/app/views/admin.html
@@ -32,16 +32,16 @@
 		        </li>
 		        #{secure.check 'admin'}
 		            <li class="${request.controller == 'Posts' ? 'selected' : ''}">
-		                <a href="@{Posts.list()}">Posts</a>
+		                <a href="@{Posts.list()}">&{'Posts'}</a> 
 		            </li>
 		            <li class="${request.controller == 'Tags' ? 'selected' : ''}">
-		                <a href="@{Tags.list()}">Tags</a>
+		                <a href="@{Tags.list()}">&{'Tags'}</a>
 		            </li>
 		            <li class="${request.controller == 'Comments' ? 'selected' : ''}">
-		                <a href="@{Comments.list()}">Comments</a>
+		                <a href="@{Comments.list()}">&{'Comments'}</a>
 		            </li>
 		            <li class="${request.controller == 'Users' ? 'selected' : ''}">
-		                <a href="@{Users.list()}">Users</a>
+		                <a href="@{Users.list()}">&{'Users'}</a>
 		            </li>
 		        #{/secure.check}
 		    </ul>
